to make gatttool

--- a/examples/gatttool/CMakeLists.txt
+++ b/examples/gatttool/CMakeLists.txt
@@ -53,3 +53,8 @@ set(gatttool_SRCS gatttool.c interactive.c utils.c)
 
 add_executable(gatttool ${gatttool_SRCS})
 target_link_libraries(gatttool ${GATTLIB_LIBRARIES} ${GATTLIB_LDFLAGS} ${GLIB_LDFLAGS} ${PCRE_LIBRARIES} readline tinfo pthread)
+
+
+#set(iot_src iot.cpp)
+#add_executable(iot ${iot_src})
+#target_link_libraries(iot ${GATTLIB_LIBRARIES} ${GATTLIB_LDFLAGS} ${GLIB_LDFLAGS} ${PCRE_LIBRARIES} tinfo pthread)
