--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,8 @@ if(GATTLIB_BUILD_EXAMPLES)
   add_subdirectory(examples/read_write_memory)
   add_subdirectory(examples/notification)
   add_subdirectory(examples/nordic_uart)
-  add_subdirectory(examples/gatttool)
+  add_subdirectory(examples/connector)
+# add_subdirectory(examples/gatttool)
   
   # Some examples require Bluez code and other DBus support
   if (NOT GATTLIB_DBUS)
